--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -231,12 +231,16 @@ bg:
   friends:
     you have N friends: "Имате %{count} приятели"
     none me: "Споделете вашите моменти в Библията като отметки, акценти и бележки с най-близките си приятели и семейството си."
+    find friends: "Открии приятели"
     blank slate:
       heading: "В момента не сте приятели"
       description: "Вие трябва да сте приятели с този човек, за да видите неговите приятели."
     limit notice: "Можете да имате най-много 150 приятели"
     limit description: "Ограничаването на вашето приложение за Библията до приятелства с хора, които познавате добре, създава среда за честни разговори и споделени открития с доверени приятели."
   friendships:
+    find friends title: "Открии приятели"
+    widget:
+      find friends title: "Открии приятели"
     offer success: "Искането за приятелство е изпратено"
     offer failure: "Грешка при изпращането на искането за приятелство"
     create success: "Успех! Вече сте приятели."
@@ -582,6 +586,9 @@ bg:
     none me: "Нямате значки."
     none user: "%{username} не е получил значки."
   plans:
+    widget:
+      my plans: "Моите планове"
+      start reading: "Започни четене"
     settings: "Настройки"
     privacy:
       visible to friends?: "Искате ли вашата дейност с този план да бъде видима за приятелите ви?"
