--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -203,12 +203,16 @@ hi:
   friends:
     you have N friends: "आपके %{count}मित्र हैं "
     none me: "अपने करीबी मित्रों और परिवार सदस्यों के साथ बाइबिल अध्ययन के दौरान अनुभव किया गया अद्भुत एहसास को बुकमार्क,हाईलाइट और नोट के रूप में शेयर करे। "
+    find friends: "मित्रों को खोजे"
     blank slate:
       heading: "वर्त्तमान में आप मित्र नहीं हैं "
       description: "आपको इस व्यक्ति के मित्रों की जानकारी के लिए उनसे मित्रता अनिवार्य हैं। "
     limit notice: "अधिकतम मित्र 150 "
     limit description: "बाइबिल App मित्रता अपने जाने पहचाने मित्रों के मध्य सीमित रखने से बाइबिल के बारे में खरा संवाद एवं उसके अध्ययन नए दृष्टिकोण के साथ करने का माहौल बनाया जा सकता हैं। "
   friendships:
+    find friends title: "मित्रों को खोजे"
+    widget:
+      find friends title: "मित्रों को खोजे"
     offer success: "मित्रता अनुरोध भेजा गया "
     offer failure: "मित्रता अनुरोध भेजने में त्रुटि पाया गया "
     create failure: "मित्रता बनाने में त्रुटि "
@@ -551,6 +555,9 @@ hi:
     none me: "आपके द्वारा अभी तक कोई badge अर्जित नहीं किया गया हैं।"
     none user: "%{username} के द्वारा अभी तक कोई badge अर्जित नहीं किया गया हैं।"
   plans:
+    widget:
+      my plans: "मेरी योजनाएँ "
+      start reading: "अध्ययन प्रारंभ करे "
     settings: "सेटिंग्स"
     privacy:
       visible to friends?: "इस पाठक योजना के साथ अपनी गतिविधि मित्रों के बीच प्रत्य्क्ष करना चाहते हैं?"
