--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -207,12 +207,16 @@ km:
   friends:
     you have N friends: "អ្នក​មានមិត្ត %{count} នាក់"
     none me: "ចែក​រំលែក​មតិ​របស់​អ្នក​ក្នុងព្រះ​គម្ពីរ​ដូចជា កំណត់​ចំណាំ, គំនូស​ពណ៌, និង​កំណត់​ត្រា​ជាមួយ​មិត្ត​ជិត​ស្និទ្ធ និង​គ្រួសារ​របស់​អ្នក​"
+    find friends: "រក​មិត្ត​ភក្តិ"
     blank slate:
       heading: "មិន​មាន​មិត្ត​ថ្មី​នេះ"
       description: "អ្នក​ត្រូវធ្វើ​ជាមិត្ត​របស់​បុគ្គល​នេះ ដើម្បី​អាច​មើល​មិត្ត​របស់​គាត់​បាន។"
     limit notice: "អ្នក​អាច​មាន​មិត្ត​ច្រើន​ដូច​ជា​150"
     limit description: "ការ​កំណត់​មិត្ត​លើ​កម្ម​វិធី​ព្រះ​គម្ពីរ​គឺ​ដើម្បី​អោយ​មនុស្ស​ស្គាល់​និងបង្កើត​នូវ​បរិយាកាស​នៃ​ភាព​ស្មោះត្រង់​ក្នុង​ការ​សន្ទនា​និង​ចែក​រំលែក​នូវ​អ្វី​ដែល​បាន​រក​ឃើញ​ជាមួយ​មិត្ត​ជិតស្និទ្ធ​របស់​គេ។"
   friendships:
+    find friends title: "រក​មិត្ត​ភក្តិ"
+    widget:
+      find friends title: "រក​មិត្ត​ភក្តិ"
     offer success: "សំណើរ​ជា​មិត្ត​បាន​ផ្ញើរ"
     offer failure: "បញ្ហា​ ក្នុង​ការ​ផ្ញើរ​សំណើរ​ជា​មិត្ត"
     create success: "ជោគ​ជ័យ! អ្នក​ជា​មិត្ត​ភក្តិ​នឹង​គ្នា​ហើយ"
@@ -559,6 +563,9 @@ km:
     none me: "លោក​អ្នក​មិន​ទទួល​បាន ផ្លាក់​សញ្ញា​ អី​នៅ​ឡើយ​ទេ"
     none user: "%{username} មិន​ទាន់​ទទួល​បាន ផ្លាក​សញ្ញា អី​នៅ​ឡើយ​ទេ"
   plans:
+    widget:
+      my plans: "គំរោង​របស់​ខ្ញុំ"
+      start reading: "ចាប់ផ្ដើមអាន"
     settings: "ការ​កំណត់"
     privacy:
       visible to friends?: "តើ​អ្នក​ចង់​អោយ​ សកម្ម​ភាព​របស់​អ្នក ជាមួយ​នឹង​គំរោង​នេះ អោយ​មិត្ត​ភក្តិ​ឃើញ​ទេ?"
