--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -1,5 +1,15 @@
 mn:
   social:
+    intro page:
+      main heading: "Харилцан Яриа & Өрнөл"
+      main description: "Итгэлт найзуудтайгаа библиэр аялацгаая"
+      moment:
+        timestamp: "5н ѳдѳрийн ѳмнѳ"
+        title: "Дуулал 31:7 хавчуурга хийсэн"
+        verse: "Би Таны хайр энэрэлд баясан баярлах болно, Яагаад гэвэл Та миний зүдгүүрийг харсан. Та сэтгэлийн минь зовлонг мэдсэн бѳгѳѳд"
+        reference: "Дуулал 31:7"
+        discover:
+          button: "Би яаж эхлэх вэ?"
     share: "Хуваалцах"
     my connections: "Холбогдсон Дансууд"
     connected as: "%{username} хэрэглэгчийн нэрээр %{connection} тэй холбогдсон байна."
@@ -207,12 +217,16 @@ mn:
   friends:
     you have N friends: "Танд  %{тоо} найзууд байна"
     none me: "Библи унших явцдаа хийсэн хавчуурга, тодруулга ба тэмдэглэлээ дотно найзууд болон гэр бүлийнхэнтэйгээ хуваалц."
+    find friends: "Найзууд хайх"
     blank slate:
       heading: "Одоогоор найзууд биш"
       description: "Энэ хүний найзуудыг харахын тулд найз болох шаардлагатай."
     limit notice: "Та 150 хүртэл найзтай байх боломжтой"
     limit description: "Та Библи Апп дахь нөхөрлөлийн хүрээгээ өөрийн сайн таних хүмүүсээр хязгаарласнаар дотно яриа өрнүүлэх хийгээд шинээр таньж мэдсэн зүйлээ итгэл бүхий найзуудтайгаа хуваалцах боломжтой."
   friendships:
+    find friends title: "Найзууд хайх"
+    widget:
+      find friends title: "Найзууд хайх"
     offer success: "Найз болох хүсэлт илгээгдсэн"
     offer failure: "Найзын хүсэлт илгээхэд алдаа гарсан"
     create success: "Найзууд боллоо."
@@ -559,6 +573,9 @@ mn:
     none me: "Та одоогоор ямар ч тэмдэгт цуглуулаагүй байна."
     none user: "%{username}  одоогоор ямар ч тэмдэгт аваагүй байна."
   plans:
+    widget:
+      my plans: "Миний Тѳлѳвлѳгѳѳнүүд"
+      start reading: "Уншиж эхлье"
     settings: "Тохиргоо "
     privacy:
       visible to friends?: "Та найзууддаа өөрийн үйл ажиллагааг харуулмаар байна уу?"
