--- a/config/locales/es-ES.yml
+++ b/config/locales/es-ES.yml
@@ -4,6 +4,8 @@ es-ES:
       main heading: "Conversación y descubrimiento"
       main description: "Una nueva forma de explorar la Biblia con amigos de confianza"
       moment:
+        user aaron: "Aaron Steele"
+        user andy: "Andy Knight"
         timestamp: "hace 5 días"
         title: "Salmo 31:7 destacado"
         verse: "Estaré contento y me regocijaré en tu amor sin falla, porque has visto mis problemas, y tienes cuidado de la angustia de mi alma."
@@ -12,8 +14,8 @@ es-ES:
           copy: "Descubre y aprende con tus amigos según añaden destacados, marcadores y notas."
           button: "¿Dónde comienzo?"
         share:
-          copy: "Comparte conversaciones sinceras sobre la Escritura."
-          button: "Empieza a encontrar a algunos amigos."
+          copy: "Comparte conversaciones honestas sobre la Escritura."
+          button: "Encuentra a algunos amigos."
         likes:
           info: "y 4 más como este"
         comments:
@@ -24,6 +26,12 @@ es-ES:
             text: "Amén, yo también. Ahora te mando un correo electrónico."
             time: "hace 27 minutos"
           field placeholder: "Escribe un comentario..."
+    widget:
+      timeline: "Línea temporal"
+      no activity yet: "Todavía no hay actividad."
+    moment:
+      read all: "Leer todo"
+      read less: "Leer menos"
     share: "Compartir"
     my connections: "Cuentas conectadas"
     connected as: "Te has conectado a %{connection} como %{username}."
@@ -146,6 +154,7 @@ es-ES:
   find friends: "Encontrar amigos"
   search placeholder: "Buscar..."
   search: "Buscar"
+  more: "Más"
   book: "Libro"
   filter book: "Filtrar libros..."
   save: "Guardar"
@@ -231,12 +240,20 @@ es-ES:
   friends:
     you have N friends: "Tienes %{count} amigos"
     none me: "Comparte tus momentos con la Biblia tales como los marcadores, los destacados y las notas con tus amigos más cercanos y familia."
+    find friends: "Encuentra amigos"
     blank slate:
       heading: "No hay amigos actualmente"
       description: "Debes ser amigo de esta persona para poder ver quiénes son sus amigos."
     limit notice: "Puedes tener tan sólo 150 amigos"
     limit description: "Limitar tus amistades de la Biblia App con personas que conoces bien creará un entorno que te facilitará mantener buenas conversaciones y compartir descubrimientos con amigos de confianza."
   friendships:
+    find friends title: "Encuentra amigos"
+    search by name: "Buscar por nombre"
+    search button: "Ir"
+    widget:
+      find friends title: "Encuentra amigos"
+      search by name: "Buscar por nombre"
+      search button: "Ir"
     offer success: "Petición de amistad enviada"
     offer failure: "Error al enviar la petición de amistad"
     create success: "¡Éxito! Ahora sois amigos."
@@ -269,6 +286,7 @@ es-ES:
     form:
       title field: "Título:"
       content field: "Contenido:"
+      highlight field: "Destacado (opcional)"
       reference field: "Referencia(s):"
       status field: "Estado:"
       save button: "Guardar"
@@ -358,6 +376,7 @@ es-ES:
     my profile: "Mi perfil"
     edit profile: "Editar perfil"
     update profile: "Actualizar perfil"
+    go to your profile: "Ir a tu perfil"
     other user profile: "Perfil de %{username}"
     my password: "Cambiar mi contraseña"
     edit password: "Cambiar contraseña"
@@ -548,6 +567,7 @@ es-ES:
     all: "Todas"
     labels label: "Eiquetas:"
     title: "Marcadores"
+    my labels: "Mis etiquetas"
     not found: "Los marcadores te darán una guía de referencia rápida a tus pasajes favoritos o al último capítulo que leíste de un libro en particular. Para agregar un marcador, selecciona un versículo en el lector de la Biblia y luego haz clic en el botón Seleccionado en la parte superior del lector."
     other user not found: "%{username} no ha guardado ningún marcador todavía."
     creation form errors: "Los siguientes errores impidieron la creación de tu marcador:"
@@ -573,6 +593,7 @@ es-ES:
       title field: "Título:"
       reference field: "Referencia"
       labels field: "Etiquetas (separadas por comas):"
+      highlight field: "Destacado (opcional)"
       colors field: "Color:"
       update button: "Actualiza el marcador"
       save button: "Guardar marcador"
@@ -583,6 +604,12 @@ es-ES:
     none me: "Aún no has ganado insignias."
     none user: "%{username} aún no ha ganado ninguna insignia."
   plans:
+    widget:
+      my plans: "Mis Planes de lectura"
+      start reading: "Comenzar a leer"
+      view my plans: "Ver mis Planes de lectura"
+      featured plans: "Planes disponibles"
+      view all plans: "Ver todos los planes de lectura"
     settings: "Configuración"
     privacy:
       visible to friends?: "¿Te gustaría que tu actividad en este plan sea visible para tus amigos?"
