--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -2,6 +2,36 @@ zh-CN:
   social:
     intro page:
       main heading: "对话 & 发现"
+      main description: "一种与可信赖的朋友一起体验圣经的全新方式"
+      moment:
+        user aaron: "李小明"
+        user andy: "刘小红"
+        timestamp: "五天前"
+        title: "给诗篇 31:7 加了书签"
+        verse: "我要为你的慈爱高兴欢喜，因为你见过我的困苦，知道我心中的艰难。"
+        reference: "诗篇 31:7"
+        discover:
+          copy: "在朋友们添加高亮显示（还有书签和笔记）时得到通知，并与他们一起学习。"
+          button: "我能从哪里开始？"
+        share:
+          copy: "真诚地分享关于经文的见解。"
+          button: "从找些朋友开始。"
+        likes:
+          info: "有四个以上的人喜欢这个"
+        comments:
+          first:
+            text: "确实需要今天听到，谢谢。让我们立刻赶上！"
+            time: "大约三小时前"
+          second:
+            text: "阿们！我也是。现在给您发邮件。"
+            time: "大约 27 分钟前"
+          field placeholder: "写评论..."
+    widget:
+      timeline: "时间轴"
+      no activity yet: "还没有任何活动。"
+    moment:
+      read all: "阅读全部"
+      read less: "简读"
     share: "分享"
     my connections: "已绑定的账户"
     connected as: "您已经与 %{connection} 上的 %{username}账户关联。"
@@ -36,7 +66,7 @@ zh-CN:
     users username required: "请务必输入用户名。"
     users first name required: "您必须键入一个名字"
     users last name required: "您必须键入一个姓氏"
-    moments content required: "内容不能留白。"
+    moments content required: "内容不能为空。"
   meta:
     kids_app:
       title: "儿童圣经软件"
@@ -124,6 +154,7 @@ zh-CN:
   find friends: "寻找朋友"
   search placeholder: "搜索..."
   search: "搜索"
+  more: "更多"
   book: "书卷"
   filter book: "筛选书卷..."
   save: "保存"
@@ -198,23 +229,31 @@ zh-CN:
     destroy success: "赞已被删除"
     destroy failure: "您的赞不能被删除"
   comments:
-    view all N: "查看所有 %{count} 评语"
+    view all N: "查看所有 %{count} 评论"
     post comment: "张贴评语"
     create success: "成了！您的评论已经保存。"
     create failure: "不能张贴评语"
-    destroy success: "评语已被删除"
-    destroy failure: "评语不能被删除"
+    destroy success: "评论已被删除"
+    destroy failure: "评论不能被删除"
     form:
       save button: "发布"
   friends:
     you have N friends: "您有%{count} 个朋友"
     none me: "和您亲近的朋友和家人分享您的书签，高亮显示和笔记等动态时刻。"
+    find friends: "寻找朋友"
     blank slate:
       heading: "现在不是朋友"
       description: "您必须和这个人成为朋友才能看到他的朋友。"
     limit notice: "您可以有多至 150 位朋友"
     limit description: "将圣经软件上的朋友关系限定在熟悉的人之间，这有助于创造一个坦诚对话和彼此信任的氛围。"
   friendships:
+    find friends title: "寻找朋友"
+    search by name: "按姓名搜索"
+    search button: "去"
+    widget:
+      find friends title: "寻找朋友"
+      search by name: "按姓名搜索"
+      search button: "去"
     offer success: "朋友请求以发送"
     offer failure: "发送朋友请求时出错误"
     create success: "成了！你们现在是朋友了。"
@@ -247,6 +286,7 @@ zh-CN:
     form:
       title field: "标题："
       content field: "内容："
+      highlight field: "高亮显示：（可选）"
       reference field: "经节："
       status field: "状态："
       save button: "保存"
@@ -336,6 +376,7 @@ zh-CN:
     my profile: "我的个人资料"
     edit profile: "编辑个人资料"
     update profile: "更新个人资料"
+    go to your profile: "去您的个人档案"
     other user profile: "%{username} 的个人档案"
     my password: "更改密码"
     edit password: "更改密码"
@@ -515,7 +556,7 @@ zh-CN:
       friendships: "有朋友请求时通知我"
       moments: "通知我朋友的活动"
       comments: "我的活动有评语时通知我"
-      likes: "我的活动有点赞时通知我。"
+      likes: "对我的活动点赞时通知我。"
   bookmarks:
     new: "新书签"
     edit: "编辑"
@@ -526,6 +567,7 @@ zh-CN:
     all: "所有笔记"
     labels label: "标签："
     title: "书签"
+    my labels: "我的标签"
     not found: "书签能使您快速查询到某一特定书卷中您喜欢的章节或您上次阅读的章节。添加书签的方法是在圣经阅读器中选择一节经文，然后点击阅读器顶部的【选中的】按钮即可。"
     other user not found: "%{username}还没有保存任何书签。"
     creation form errors: "下列错误妨碍了您创建书签："
@@ -551,6 +593,7 @@ zh-CN:
       title field: "标题："
       reference field: "参考经文："
       labels field: "标签（用逗号分隔）："
+      highlight field: "高亮显示：（可选的）"
       colors field: "颜色："
       update button: "更新书签"
       save button: "保存书签"
@@ -561,6 +604,12 @@ zh-CN:
     none me: "您还没有获得任何徽章。"
     none user: "%{username} 还没有获得任何徽章。"
   plans:
+    widget:
+      my plans: "我的计划"
+      start reading: "开始阅读"
+      view my plans: "浏览我的计划"
+      featured plans: "特色计划"
+      view all plans: "浏览全部计划"
     settings: "设置"
     privacy:
       visible to friends?: "您是否愿意让朋友看到您的读经计划的活动？"
